Store Fix Overflow

--- a/src/Components/Store/Store.scss
+++ b/src/Components/Store/Store.scss
@@ -1,8 +1,3 @@
-html {
-    overflow: hidden !important; 
-}
-
-
 #store.aside-open {
     .left-container {
         margin-left: 260px !important;
