--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ h1, h2, h3, h4, h5, h6, p, svg, li, a {
 
 html,
 body {
-  overflow-x: hidden;
+  overflow-x: visible !important;
 }
 
 /* Firefox */
